[project]
name = "aiko_services"
version = "0.4"
readme = "ReadMe.md"
description = "Distributed embedded service framework"
requires-python = ">=3.9.0,<=3.12.3"

licence-files = { paths = ["LICENCE"]}

keywords = [
 "TO_BE_COMPLETED"
]


# See: https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Intended Audience :: Developers",
]

authors = [
  {name = "Andy Gelme", email = "geekscape@gmail.com"},
]

dependencies = [
  "asciimatics~=1.14.0",
  "avro~=1.11.1",
  "avro-validator~=1.2.1",
  "click~=8.0",
  "numpy~=1.19.1",
  "paho-mqtt>=1.6.1,<2.0.0",
  "Pillow~=10.0.0",
  "pyperclip~=1.8.2",
  "requests~=2.25.1",
  "transitions~=0.9.0",
  "wrapt~=1.12.1",
]

[project.optional-dependencies]
opencv-python = ["opencv-python~=4.4.0"]
linux = ["PyAudio~=0.2.13"]
macosx = ["PyAudio~=0.2.13"]

[project.scripts]
aiko = "aiko_services.cli:main"
aiko_dashboard = "aiko_services.dashboard:main"
aiko_pipeline = "aiko_services.pipeline:main"
aiko_registrar = "aiko_services.registrar:main"

[tool.hatch.envs.default]
pytest = "^5.0"
ipython = "*"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[tool.hatch]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
