[project]
name = "aiko_services"
version = "0.6"
readme = "ReadMe.md"
description = "Distributed embedded service framework for A.I and robotics"
requires-python = ">=3.9.0,<=3.13.0"

authors = [
    {name = "Andy Gelme", email = "geekscape@gmail.com"}
]

keywords = [
    "ai", "distributed", "embedded", "framework", "internet of things",
    "machine learning", "media", "robotics"
]

licence-files = { paths = ["LICENCE"]}

# See: https://pypi.org/classifiers
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing"
]

dependencies = [
    "asciimatics~=1.15.0",
    "avro~=1.12.0",
    "avro-validator~=1.2.1",
    "click~=8.1.7",
    "numpy~=2.1.2",
    "paho-mqtt>=1.6.1,<2.0.0",
    "Pillow~=10.4.0",
    "pyperclip~=1.9.0",
    "requests~=2.32.3",
    "transitions~=0.9.2",
    "wrapt~=1.16.0"
]

# [project.optional-dependencies]
# opencv-python = ["opencv-python~=4.10.0.84"]
# opencv-contrib-python = ["opencv-contrib-python~=4.10.0.84"]
# linux = ["PyAudio~=0.2.14"]
# macosx = ["PyAudio~=0.2.14"]
# sounddevice = ["sounddevice~=0.5.0"]

[project.scripts]
# aiko = "aiko_services.main.cli:main"
aiko_dashboard = "aiko_services.main.dashboard:main"
aiko_pipeline = "aiko_services.main.pipeline:main"
aiko_registrar = "aiko_services.main.registrar:main"

[tool.hatch]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/aiko_services"]
exclude = [
    "src/aiko_services/archive",
    "src/aiko_services/elements/media/data",
    "src/aiko_services/examples/jukebox",
    "src/aiko_services/examples/onnx",
    "src/aiko_services/examples/yolo",
#   "src/aiko_services/examples/yolo/datasets",
#   "src/aiko_services/examples/yolo/media",
    "cache",
    "venv*"
]

# https://hatch.pypa.io/latest/config/build/#build-targets
[tool.hatch.build.targets.wheel]
packages = ["src/aiko_services"]
exclude = [
    "src/aiko_services/archive",
    "src/aiko_services/elements/media/data",
    "src/aiko_services/examples/jukebox",
    "src/aiko_services/examples/onnx",
    "src/aiko_services/examples/yolo",
#   "src/aiko_services/examples/yolo/datasets",
#   "src/aiko_services/examples/yolo/media",
    "cache",
    "venv*"
]

[tool.hatch.envs.default]
pytest = "^8.0"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
